Split colors_combined, use individual color dict mapping.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_combined = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+    "colors_mode, colors_purpose, colors_sensed = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
    ]
   },
   {
@@ -184,10 +184,10 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax[0], colors_mode)\n",
     "    store_alt_html_stacked_bar_chart(df_confirmed_tc_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    store_alt_text_stacked_bar_chart(df_confirmed_tc_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
-    "    plot_stacked_bar_chart(df_sensed_tc, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Total trips)\", ax[1], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_tc, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Total trips)\", ax[1], colors_sensed)\n",
     "    store_alt_html_stacked_bar_chart(df_sensed_tc_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    store_alt_text_stacked_bar_chart(df_sensed_tc_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
@@ -228,8 +228,8 @@
     "    store_alt_text_stacked_bar_chart(df_confirmed_tc_u80_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    store_alt_html_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "    store_alt_text_stacked_bar_chart(df_sensed_tc_u80_expanded, file_name, \"Sensed by OpenPATH\\n (Total trips)\")\n",
-    "    plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax[0], colors_combined, )\n",
-    "    plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Total trips)\", ax[1], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax[0], colors_mode)\n",
+    "    plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Total trips)\", ax[1], colors_sensed)\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -272,7 +272,7 @@
     "    create_alt_text_title(plot_title, file_name)\n",
     "    store_alt_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name,\"Labeled by user\\n (Confirmed trips)\")\n",
     "    store_alt_text_stacked_bar_chart(df_total_trip_commute_expanded, file_name,\"Labeled by user\\n (Confirmed trips)\")\n",
-    "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_combined)\n",
+    "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_mode)\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -304,10 +304,10 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", \"Labeled by user\\n (Trip distance)\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", \"Labeled by user\\n (Trip distance)\", ax[0], colors_mode)\n",
     "    store_alt_html_stacked_bar_chart(df_confirm_dist_expanded, file_name, \"Labeled by user\\n (Trip distance)\")\n",
     "    store_alt_text_stacked_bar_chart(df_confirm_dist_expanded, file_name, \"Labeled by user\\n (Trip distance)\")\n",
-    "    plot_stacked_bar_chart(df_sensed_dist, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Overall)\", ax[1], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_dist, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Overall)\", ax[1], colors_sensed)\n",
     "    store_alt_html_stacked_bar_chart(df_sensed_dist_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "    store_alt_text_stacked_bar_chart(df_sensed_dist_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
@@ -341,10 +341,10 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Labeled by user\\n (Trip distance - Land)\", \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Labeled by user\\n (Trip distance - Land)\", \"Confirmed Trip\", ax[0], colors_mode)\n",
     "    store_alt_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, \"Labeled by user\\n (Trip distance - Land)\")\n",
     "    store_alt_text_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, \"Labeled by user\\n (Trip distance - Land)\")\n",
-    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], colors_sensed)\n",
     "    store_alt_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "    store_alt_text_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
@@ -376,7 +376,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_combined)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_purpose)\n",
     "    store_alt_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    store_alt_text_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
