--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_combined = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+    "colors_mode, colors_purpose, colors_sensed = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_combined)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_purpose)\n",
     "    store_alt_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
     "    store_alt_text_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
@@ -229,7 +229,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\", ax, colors_combined)\n",
+    "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\", ax, colors_mode)\n",
     "    store_alt_html_stacked_bar_chart(df_replaced_dist_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "    store_alt_text_stacked_bar_chart(df_replaced_dist_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
@@ -262,7 +262,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    create_alt_html_title(plot_title, file_name)\n",
     "    create_alt_text_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_combined)\n",
+    "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_mode)\n",
     "    store_alt_html_stacked_bar_chart(df_replaced_tc_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
     "    store_alt_text_stacked_bar_chart(df_replaced_tc_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
