Refactor code block for Commute Trips in generic_metrics.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -249,19 +249,19 @@
     "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
     "        translation_work = purpose_map_label['work']\n",
     "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
+    "\n",
+    "    df_total_trip_commute_expanded, df_total_trip_commute = process_commute_data_frame(expanded_ct, trip_purpose_query)\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users) if not expanded_ct.empty else \"\"\n",
-    "    labels_mc_commute = expanded_ct.query(trip_purpose_query)['Mode_confirm'].value_counts(dropna=True).keys().tolist() if not expanded_ct.empty and 'Mode_confirm' in expanded_ct.columns else []\n",
-    "    values_mc_commute = expanded_ct.query(trip_purpose_query)['Mode_confirm'].value_counts(dropna=True).tolist() if not expanded_ct.empty and 'Mode_confirm' in expanded_ct.columns else []\n",
-    "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute)\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
+    "\n",
+    "    plot_title = plot_title_no_quality\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
     "    create_alt_text_and_html_title(plot_title, file_name)\n",
     "    store_alt_text_and_html_stacked_bar_chart(df_total_trip_commute_expanded, file_name,\"Labeled by user\\n (Confirmed trips)\")\n",
     "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_mode)\n",
