Updated bugs in notebooks

--- a/replacement_mode_modeling/01_extract_db_data.ipynb
+++ b/replacement_mode_modeling/01_extract_db_data.ipynb
@@ -43,11 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add path to your emission server here.\n",
-    "emission_path = Path(os.getcwd()).parent.parent / 'my_emission_server' / 'e-mission-server'\n",
-    "sys.path.append(str(emission_path))\n",
+    "# Add path to your emission server here. Uncommented because the notebooks are run in the server.\n",
+    "# If running locally, you need to point this to the e-mission server repo.\n",
+    "# emission_path = Path(os.getcwd()).parent.parent.parent / 'my_emission_server' / 'e-mission-server'\n",
+    "# sys.path.append(str(emission_path))\n",
     "\n",
-    "# Also add the home (viz_scripts) to the path\n",
+    "# # Also add the home (viz_scripts) to the path\n",
     "sys.path.append('../viz_scripts')"
    ]
   },
@@ -58,7 +59,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scaffolding\n",
     "import emission.core.get_database as edb\n",
     "import emission.storage.timeseries.abstract_timeseries as esta"
    ]
@@ -75,7 +75,6 @@
     "    \"openpath_prod_durham\",      # Has composite trips\n",
     "    \"openpath_prod_mm_masscec\",  # Has composite trips\n",
     "    \"openpath_prod_ride2own\",    # Has composite trips\n",
-    "#    \"openpath_prod_uprm_civic\",  # No replaced mode (Excluded)\n",
     "    \"openpath_prod_uprm_nicr\"    # Has composite trips\n",
     "]"
    ]
@@ -590,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aaedf66",
+   "id": "07922a00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,16 +685,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336508c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(survey_data.columns.tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "29bc7996",
    "metadata": {},
    "outputs": [],
@@ -714,9 +703,11 @@
     "survey_data.loc[\n",
     "    survey_data.n_motor_vehicles.isin(\n",
     "        ['prefer_not_to_say', 'Prefer not to say / Prefiero no decir.']\n",
-    "    ), 'n_motor_vehicles'\n",
-    "] = 0\n",
-    "survey_data.loc[survey_data.n_motor_vehicles.isin(['more_than_3', '4+', 'more_than_4']), 'n_motor_vehicles'] = 4\n",
+    "    ), 'n_motor_vehicles'] = 0\n",
+    "\n",
+    "survey_data.loc[survey_data.n_motor_vehicles.isin(\n",
+    "    ['more_than_3', '4+', 'more_than_4', 'more_than_3']\n",
+    "), 'n_motor_vehicles'] = 4\n",
     "survey_data.n_motor_vehicles = survey_data.n_motor_vehicles.astype(int)\n",
     "\n",
     "# gtg\n",
@@ -724,22 +715,20 @@
     "    lambda x: 1 if str(x).lower() == 'yes' else 0\n",
     ")\n",
     "\n",
-    "survey_data.loc[survey_data.n_residents_u18 == 'prefer_not_to_say'] = 0\n",
+    "survey_data.loc[survey_data.n_residents_u18 == 'prefer_not_to_say', 'n_residents_u18'] = 0\n",
     "survey_data.n_residents_u18 = survey_data.n_residents_u18.astype(int)\n",
     "\n",
-    "survey_data.loc[survey_data.n_residence_members == 'prefer_not_to_say'] = 0\n",
+    "survey_data.loc[survey_data.n_residence_members == 'prefer_not_to_say', 'n_residence_members'] = 0\n",
     "survey_data.n_residence_members = survey_data.n_residence_members.astype(int)\n",
     "\n",
     "survey_data.loc[survey_data.n_residents_with_license == 'prefer_not_to_say'] = 0\n",
-    "survey_data.loc[survey_data.n_residents_with_license == 'more_than_4'] = 4\n",
+    "survey_data.loc[survey_data.n_residents_with_license == 'more_than_4', 'n_residents_with_license'] = 4\n",
     "survey_data.n_residents_with_license = survey_data.n_residents_with_license.astype(int)\n",
     "\n",
-    "# In allCEO, we see 50 & 9999. What??\n",
+    "# Handle abnormal inputs.\n",
     "survey_data = survey_data[\n",
-    "    (survey_data.n_residence_members < 10) & (survey_data.n_residents_u18 < 10) & \n",
-    "    (survey_data.n_residents_with_license < 10) & \n",
-    "     (survey_data.n_residence_members - survey_data.n_residents_with_license > 0) &\n",
-    "    (survey_data.n_residence_members - survey_data.n_residents_u18 > 0)\n",
+    "     (survey_data.n_residence_members - survey_data.n_residents_with_license >= 0) &\n",
+    "    (survey_data.n_residence_members - survey_data.n_residents_u18 >= 0)\n",
     "].reset_index(drop=True)\n",
     "\n",
     "# gtg\n",
@@ -837,7 +826,7 @@
     "            \"professional__managerial__or_technical\": \"Professional, Manegerial, or Technical\",\n",
     "            \"manufacturing__construction__maintenance\": \"Manufacturing, construction, maintenance, or farming\",\n",
     "            \"clerical_or_administrative_support\": \"Clerical or administrative support\",\n",
-    "            \"prefer_not_to_say\": \"Prefer not to say\",\n",
+    "            \"prefer_not_to_say\": \"Prefer not to say\"\n",
     "        }\n",
     "        \n",
     "        df.primary_job_description = df.primary_job_description.apply(\n",
@@ -1616,7 +1605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Done processing for {CURRENT_DB=}\")"
+    "print(f\"Done processing for {CURRENT_DB=}, Number of unique users: {len(filtered_trips.user_id.unique())}\")"
    ]
   },
   {
@@ -1636,20 +1625,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d3eaec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(filtered_trips.target.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "31f35a04",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# savepath = Path('./data/filtered_data')\n",
     "savepath = Path('./data/filtered_data')\n",
     "\n",
     "if not savepath.exists():\n",
@@ -1657,6 +1637,14 @@
     "\n",
     "filtered_trips.to_csv(savepath / f'preprocessed_data_{CURRENT_DB}.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f16fb354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
