Fixed transit bug in 02_run_trip_models.py; added biogeme notebook

--- a/replacement_mode_modeling/01_extract_db_data.ipynb
+++ b/replacement_mode_modeling/01_extract_db_data.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "# Add path to your emission server here. Uncommented because the notebooks are run in the server.\n",
     "# If running locally, you need to point this to the e-mission server repo.\n",
-    "# emission_path = Path(os.getcwd()).parent.parent.parent / 'my_emission_server' / 'e-mission-server'\n",
+    "# emission_path = Path(os.getcwd()).parent.parent / 'my_emission_server' / 'e-mission-server'\n",
     "# sys.path.append(str(emission_path))\n",
     "\n",
     "# # Also add the home (viz_scripts) to the path\n",
@@ -61,34 +61,6 @@
    "source": [
     "import emission.core.get_database as edb\n",
     "import emission.storage.timeseries.abstract_timeseries as esta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e171e277",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DB_SOURCE = [\n",
-    "    \"Stage_database\",            # Does NOT have composite trips BUT has section modes and distances\n",
-    "    \"openpath_prod_durham\",      # Has composite trips\n",
-    "    \"openpath_prod_mm_masscec\",  # Has composite trips\n",
-    "    \"openpath_prod_ride2own\",    # Has composite trips\n",
-    "    \"openpath_prod_uprm_nicr\"    # Has composite trips\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70fa3112",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CURRENT_DB = DB_SOURCE[0]\n",
-    "\n",
-    "assert CURRENT_DB in DB_SOURCE"
    ]
   },
   {
@@ -367,6 +339,34 @@
     "        \"Do_you_have_a_condition_or_han\": \"has_medical_condition\"\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e171e277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_SOURCE = [\n",
+    "    \"Stage_database\",            # Does NOT have composite trips BUT has section modes and distances\n",
+    "    \"openpath_prod_durham\",      # Has composite trips\n",
+    "    \"openpath_prod_mm_masscec\",  # Has composite trips\n",
+    "    \"openpath_prod_ride2own\",    # Has composite trips\n",
+    "    \"openpath_prod_uprm_nicr\"    # Has composite trips\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70fa3112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CURRENT_DB = DB_SOURCE[4]\n",
+    "\n",
+    "assert CURRENT_DB in DB_SOURCE"
    ]
   },
   {
@@ -693,11 +693,13 @@
     "survey_data['ft_job'] = survey_data.primary_job_type.apply(\n",
     "    lambda x: 1 if str(x).lower() == 'full_time' else 0\n",
     ")\n",
+    "survey_data.loc[~survey_data.ft_job.isin([0, 1]), 'ft_job'] = 0\n",
     "\n",
     "# gtg\n",
     "survey_data['multiple_jobs'] = survey_data.has_multiple_jobs.apply(\n",
     "    lambda x: 1 if str(x).lower() == 'yes' else 0\n",
     ")\n",
+    "survey_data.loc[~survey_data.multiple_jobs.isin([0, 1]), 'multiple_jobs'] = 0\n",
     "\n",
     "# gtg\n",
     "survey_data.loc[\n",
@@ -714,6 +716,7 @@
     "survey_data.has_drivers_license = survey_data.has_drivers_license.apply(\n",
     "    lambda x: 1 if str(x).lower() == 'yes' else 0\n",
     ")\n",
+    "survey_data.loc[~survey_data.has_drivers_license.isin([0, 1]), 'has_drivers_license'] = 0\n",
     "\n",
     "survey_data.loc[survey_data.n_residents_u18 == 'prefer_not_to_say', 'n_residents_u18'] = 0\n",
     "survey_data.n_residents_u18 = survey_data.n_residents_u18.astype(int)\n",
@@ -743,11 +746,14 @@
     "\n",
     "# gtg\n",
     "survey_data.is_paid = survey_data.is_paid.apply(lambda x: 1 if x == 'Yes' else 0)\n",
+    "survey_data.loc[~survey_data.is_paid.isin([0, 1]), 'is_paid'] = 0\n",
     "\n",
     "# gtg\n",
     "survey_data.has_medical_condition = survey_data.has_medical_condition.apply(\n",
     "    lambda x: 1 if str(x).lower() == 'yes' else 0\n",
     ")\n",
+    "survey_data.loc[~survey_data.has_medical_condition.isin([0, 1]), 'has_medical_condition'] = 0\n",
+    "\n",
     "\n",
     "## gtg\n",
     "survey_data.is_student.replace({\n",
@@ -761,7 +767,10 @@
     "    'Yes - Part-Time College/University': 1,\n",
     "    'Taking prerequisites missing for grad program ': 1, \n",
     "    'Graduate': 1,\n",
+    "    'Fire Fighter 2 Training': 0,\n",
+    "    'By hours ': 0,\n",
     "    'Custodian': 0, \n",
+    "    'taking classes toward early childhood licensure': 0,\n",
     "    'Work at csu': 0,\n",
     "    'not_a_student': 0, \n",
     "    'yes___vocation_technical_trade_school': 1,\n",
@@ -769,7 +778,9 @@
     "    'prefer_not_to_say': 0, \n",
     "    'yes___k_12th_grade_including_ged': 1,\n",
     "    'yes___full_time_college_university': 1\n",
-    "}, inplace=True)"
+    "}, inplace=True)\n",
+    "\n",
+    "survey_data.loc[~survey_data.is_student.isin([0, 1]), 'is_student'] = 0"
    ]
   },
   {
@@ -798,7 +809,8 @@
     "    survey_data['age'] = new_col\n",
     "    \n",
     "    survey_data.loc[survey_data.age.isin([\n",
-    "        '66___70_years_old', '76___80_years_old', '81___85_years_old'\n",
+    "        '66___70_years_old', '71___75_years_old', '76___80_years_old', '81___85_years_old',\n",
+    "        '151___155_years_old', \n",
     "    ]), 'age'] = '__65_years_old'\n",
     "    \n",
     "    survey_data.drop(columns=['birth_year'], inplace=True)\n",
@@ -894,7 +906,14 @@
     "            ]), 'primary_job_description'\n",
     "        ] = 'Manufacturing, construction, maintenance, or farming'\n",
     "\n",
-    "        df.loc[df.primary_job_description.isna(), 'primary_job_description'] = 'Other'\n",
+    "        # All others in Other\n",
+    "        df.loc[\n",
+    "            (df.primary_job_description.isna()) | (~df.primary_job_description.isin(\n",
+    "                ['Education', 'Custodial', 'Clerical or administrative support', 'Sales or service'\n",
+    "                'Food service', 'Medical/healthcare', 'Manufacturing, construction, maintenance, or farming',\n",
+    "                'Other'])), \n",
+    "            'primary_job_description'\n",
+    "        ] = 'Other'\n",
     "\n",
     "    return df"
    ]
@@ -1625,11 +1644,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe5a1909",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(filtered_trips.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "31f35a04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# savepath = Path('./data/filtered_data')\n",
     "savepath = Path('./data/filtered_data')\n",
     "\n",
     "if not savepath.exists():\n",
@@ -1641,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f16fb354",
+   "id": "065c1911",
    "metadata": {},
    "outputs": [],
    "source": []
