--- a/replacement_mode_modeling/03_user_level_models.ipynb
+++ b/replacement_mode_modeling/03_user_level_models.ipynb
@@ -309,118 +309,86 @@
     "    trip_group_key = trip_kwargs.pop('trip_grouping', 'section_mode_argmax')\n",
     "    \n",
     "    demographics = {\n",
-    "        'allceo': [\n",
-    "            'has_drivers_license', 'is_student', 'is_paid', 'income_category',\n",
-    "            'n_residence_members', 'n_residents_u18', 'n_residents_with_license',\n",
-    "            'n_motor_vehicles', 'has_medical_condition',\n",
-    "            'ft_job', 'multiple_jobs', 'n_working_residents',\n",
-    "            \"highest_education_Bachelor's degree\",\n",
-    "            'highest_education_Graduate degree or professional degree',\n",
-    "            'highest_education_High school graduate or GED',\n",
-    "            'highest_education_Less than a high school graduate',\n",
-    "            'highest_education_Prefer not to say',\n",
-    "            'highest_education_Some college or associates degree',\n",
-    "            'primary_job_description_Clerical or administrative support',\n",
-    "            'primary_job_description_Custodial',\n",
-    "            'primary_job_description_Education',\n",
-    "            'primary_job_description_Food service',\n",
-    "            'primary_job_description_Linecook',\n",
-    "            'primary_job_description_Manufacturing, construction, maintenance, or farming',\n",
-    "            'primary_job_description_Medical/healthcare',\n",
-    "            'primary_job_description_Non-profit program manager',\n",
-    "            'primary_job_description_Other',\n",
-    "            'primary_job_description_Professional, managerial, or technical',\n",
-    "            'primary_job_description_Sales or service',\n",
-    "            'primary_job_description_Self employed',\n",
-    "            'primary_job_description_food service', 'gender_Man',\n",
-    "            'gender_Nonbinary/genderqueer/genderfluid', 'gender_Prefer not to say',\n",
-    "            'gender_Woman', 'gender_Woman;Nonbinary/genderqueer/genderfluid',\n",
-    "            'age_16___20_years_old', 'age_21___25_years_old',\n",
-    "            'age_26___30_years_old', 'age_31___35_years_old',\n",
-    "            'age_36___40_years_old', 'age_41___45_years_old',\n",
-    "            'age_46___50_years_old', 'age_51___55_years_old',\n",
-    "            'age_56___60_years_old', 'age_61___65_years_old', 'age___65_years_old',\n",
-    "            'av_transit', 'av_no_trip', 'av_p_micro', 'av_s_micro', 'av_ridehail',\n",
-    "            'av_unknown', 'av_walk', 'av_car', 'av_s_car'\n",
+    "        'allceo': [ \n",
+    "            'has_drivers_license', 'is_student', 'is_paid', 'income_category', 'n_residence_members', \n",
+    "            'n_residents_u18', 'n_residents_with_license', 'n_motor_vehicles',\n",
+    "            'has_medical_condition', 'ft_job', 'multiple_jobs', 'n_working_residents', \n",
+    "            \"highest_education_Bachelor's degree\", 'highest_education_Graduate degree or professional degree', \n",
+    "            'highest_education_High school graduate or GED', 'highest_education_Less than a high school graduate', \n",
+    "            'highest_education_Prefer not to say', 'highest_education_Some college or associates degree', \n",
+    "            'primary_job_description_Clerical or administrative support', 'primary_job_description_Custodial', \n",
+    "            'primary_job_description_Education', \n",
+    "            'primary_job_description_Manufacturing, construction, maintenance, or farming', \n",
+    "            'primary_job_description_Medical/healthcare', 'primary_job_description_Other', 'gender_Man', \n",
+    "            'gender_Man;Nonbinary/genderqueer/genderfluid', 'gender_Nonbinary/genderqueer/genderfluid', \n",
+    "            'gender_Prefer not to say', 'gender_Test', 'gender_Woman', 'gender_Woman;Nonbinary/genderqueer/genderfluid', \n",
+    "            'age_16___20_years_old', 'age_1___5_years_old', 'age_21___25_years_old', 'age_26___30_years_old', \n",
+    "            'age_31___35_years_old', 'age_36___40_years_old', 'age_41___45_years_old', 'age_46___50_years_old', \n",
+    "            'age_51___55_years_old', 'age_56___60_years_old', 'age_61___65_years_old', 'age___65_years_old', \n",
+    "            'av_s_car', 'av_walk', 'av_ridehail', 'av_s_micro', 'av_transit', 'av_no_trip', 'av_car', 'av_unknown', \n",
+    "            'av_p_micro'\n",
     "        ],\n",
     "        'durham': [\n",
-    "            'is_student', 'is_paid', 'has_drivers_license', 'n_residents_u18',\n",
-    "            'n_residence_members', 'income_category',\n",
-    "            'n_residents_with_license', 'n_working_residents', 'n_motor_vehicles',\n",
-    "            'has_medical_condition', 'ft_job', 'multiple_jobs',\n",
-    "            'highest_education_bachelor_s_degree',\n",
-    "            'highest_education_graduate_degree_or_professional_degree',\n",
-    "            'highest_education_high_school_graduate_or_ged',\n",
-    "            'highest_education_less_than_a_high_school_graduate',\n",
-    "            'highest_education_some_college_or_associates_degree',\n",
-    "            'primary_job_description_Clerical or administrative support',\n",
-    "            'primary_job_description_Manufacturing, construction, maintenance, or farming',\n",
-    "            'primary_job_description_Other',\n",
-    "            'primary_job_description_Professional, Manegerial, or Technical',\n",
-    "            'primary_job_description_Sales or service', 'gender_man',\n",
-    "            'gender_non_binary_genderqueer_gender_non_confor', 'gender_woman',\n",
-    "            'age_16___20_years_old', 'age_21___25_years_old',\n",
-    "            'age_26___30_years_old', 'age_31___35_years_old',\n",
-    "            'age_36___40_years_old', 'age_41___45_years_old',\n",
-    "            'age_51___55_years_old', 'age_56___60_years_old', 'av_walk',\n",
-    "            'av_unknown', 'av_no_trip', 'av_p_micro', 'av_transit', 'av_car',\n",
-    "            'av_ridehail', 'av_s_micro', 'av_s_car'\n",
+    "             'is_student', 'is_paid', 'has_drivers_license', 'n_residents_u18', 'n_residence_members', 'income_category',\n",
+    "             'n_residents_with_license', 'n_working_residents', 'n_motor_vehicles', 'has_medical_condition', 'ft_job',\n",
+    "             'multiple_jobs', 'highest_education_bachelor_s_degree', 'highest_education_graduate_degree_or_professional_degree',\n",
+    "             'highest_education_high_school_graduate_or_ged', 'highest_education_less_than_a_high_school_graduate',\n",
+    "             'highest_education_some_college_or_associates_degree', 'primary_job_description_Clerical or administrative support',\n",
+    "             'primary_job_description_Manufacturing, construction, maintenance, or farming',\n",
+    "             'primary_job_description_Other', 'primary_job_description_Prefer not to say', 'primary_job_description_Professional, Manegerial, or Technical',\n",
+    "             'primary_job_description_Sales or service', 'gender_man', 'gender_non_binary_genderqueer_gender_non_confor',\n",
+    "             'gender_prefer_not_to_say', 'gender_woman', 'age_16___20_years_old', 'age_21___25_years_old', 'age_26___30_years_old',\n",
+    "             'age_31___35_years_old', 'age_36___40_years_old', 'age_41___45_years_old', 'age_46___50_years_old',\n",
+    "             'age_51___55_years_old', 'age_56___60_years_old', 'av_unknown', 'av_no_trip', 'av_s_micro', 'av_s_car', 'av_car',\n",
+    "             'av_p_micro', 'av_walk', 'av_transit', 'av_ridehail'\n",
     "        ],\n",
     "        'nicr': [\n",
-    "            'is_student', 'is_paid',\n",
-    "            'has_drivers_license', 'n_residents_u18', 'n_residence_members',\n",
-    "            'income_category', 'n_residents_with_license',\n",
-    "            'n_working_residents', 'n_motor_vehicles', 'has_medical_condition',\n",
-    "            'ft_job', 'multiple_jobs',\n",
-    "            'highest_education_high_school_graduate_or_ged',\n",
-    "            'highest_education_prefer_not_to_say', 'primary_job_description_Other',\n",
-    "            'gender_man', 'gender_woman', 'age_16___20_years_old', 'av_p_micro',\n",
-    "            'av_car', 'av_transit', 'av_ridehail', 'av_no_trip', 'av_s_car',\n",
-    "            'av_s_micro', 'av_unknown', 'av_walk'\n",
+    "            \n",
+    "            'is_student', 'is_paid', 'has_drivers_license', 'n_residents_u18', 'n_residence_members', \n",
+    "            'income_category', 'n_residents_with_license', 'n_working_residents', 'n_motor_vehicles', \n",
+    "            'has_medical_condition', 'ft_job', 'multiple_jobs', 'highest_education_bachelor_s_degree', \n",
+    "            'highest_education_high_school_graduate_or_ged', 'highest_education_prefer_not_to_say', \n",
+    "            'highest_education_some_college_or_associates_degree', \n",
+    "            'primary_job_description_Clerical or administrative support', 'primary_job_description_Other', \n",
+    "            'gender_man', 'gender_woman', 'age_16___20_years_old', 'age_21___25_years_old', 'age_26___30_years_old', \n",
+    "            'av_s_car', 'av_no_trip', 'av_s_micro', 'av_walk', 'av_unknown', 'av_p_micro', 'av_transit', 'av_car', \n",
+    "            'av_ridehail'\n",
     "        ],\n",
     "        'masscec': [\n",
-    "            'is_student', 'is_paid',\n",
-    "            'has_drivers_license', 'n_residents_u18', 'n_residence_members',\n",
-    "            'income_category', 'n_residents_with_license',\n",
-    "            'n_working_residents', 'n_motor_vehicles', 'has_medical_condition',\n",
-    "            'ft_job', 'multiple_jobs', 'highest_education_bachelor_s_degree',\n",
-    "            'highest_education_graduate_degree_or_professional_degree',\n",
-    "            'highest_education_high_school_graduate_or_ged',\n",
-    "            'highest_education_less_than_a_high_school_graduate',\n",
-    "            'highest_education_prefer_not_to_say',\n",
-    "            'highest_education_some_college_or_associates_degree',\n",
-    "            'primary_job_description_Clerical or administrative support',\n",
-    "            'primary_job_description_Manufacturing, construction, maintenance, or farming',\n",
-    "            'primary_job_description_Other',\n",
-    "            'primary_job_description_Prefer not to say',\n",
-    "            'primary_job_description_Professional, Manegerial, or Technical',\n",
-    "            'primary_job_description_Sales or service', 'gender_man',\n",
-    "            'gender_prefer_not_to_say', 'gender_woman', 'age_16___20_years_old',\n",
-    "            'age_21___25_years_old', 'age_26___30_years_old',\n",
-    "            'age_31___35_years_old', 'age_36___40_years_old',\n",
-    "            'age_41___45_years_old', 'age_46___50_years_old',\n",
-    "            'age_51___55_years_old', 'age_56___60_years_old',\n",
-    "            'age_61___65_years_old', 'age___65_years_old', 'av_p_micro', 'av_s_car',\n",
-    "            'av_s_micro', 'av_transit', 'av_car', 'av_no_trip', 'av_unknown',\n",
-    "            'av_ridehail', 'av_walk'\n",
+    "            'is_student', 'is_paid', 'has_drivers_license', 'n_residents_u18', 'n_residence_members', \n",
+    "            'income_category', 'n_residents_with_license', 'n_working_residents', \n",
+    "            'n_motor_vehicles', 'has_medical_condition', 'ft_job', 'multiple_jobs', \n",
+    "            'highest_education_bachelor_s_degree', 'highest_education_graduate_degree_or_professional_degree',\n",
+    "            'highest_education_high_school_graduate_or_ged', \n",
+    "            'highest_education_less_than_a_high_school_graduate', 'highest_education_prefer_not_to_say', \n",
+    "            'highest_education_some_college_or_associates_degree', \n",
+    "            'primary_job_description_Clerical or administrative support', \n",
+    "            'primary_job_description_Manufacturing, construction, maintenance, or farming', \n",
+    "            'primary_job_description_Other', 'primary_job_description_Prefer not to say', \n",
+    "            'primary_job_description_Professional, Manegerial, or Technical', \n",
+    "            'primary_job_description_Sales or service', 'gender_man', \n",
+    "            'gender_non_binary_genderqueer_gender_non_confor', 'gender_prefer_not_to_say', 'gender_woman', \n",
+    "            'age_16___20_years_old', 'age_21___25_years_old', 'age_26___30_years_old', \n",
+    "            'age_31___35_years_old', 'age_36___40_years_old', 'age_41___45_years_old', \n",
+    "            'age_46___50_years_old', 'age_51___55_years_old', 'age_56___60_years_old', \n",
+    "            'age_61___65_years_old', 'age___65_years_old', 'av_no_trip', 'av_transit', \n",
+    "            'av_ridehail', 'av_walk', 'av_car', 'av_p_micro', 'av_unknown', 'av_s_micro', 'av_s_car'\n",
     "        ],\n",
     "        'ride2own': [\n",
-    "            'has_drivers_license', 'is_student',\n",
-    "            'is_paid', 'income_category', 'n_residence_members',\n",
-    "            'n_working_residents', 'n_residents_u18', 'n_residents_with_license',\n",
-    "            'n_motor_vehicles', 'has_medical_condition',\n",
-    "            'ft_job', 'multiple_jobs',\n",
-    "            'highest_education_bachelor_s_degree',\n",
-    "            'highest_education_high_school_graduate_or_ged',\n",
-    "            'highest_education_less_than_a_high_school_graduate',\n",
-    "            'highest_education_some_college_or_associates_degree',\n",
-    "            'primary_job_description_Other',\n",
-    "            'primary_job_description_Professional, Manegerial, or Technical',\n",
-    "            'gender_man', 'gender_woman', 'age_31___35_years_old',\n",
-    "            'age_36___40_years_old', 'age_41___45_years_old',\n",
-    "            'age_51___55_years_old', 'av_no_trip', 'av_s_micro', 'av_transit',\n",
-    "            'av_car', 'av_ridehail', 'av_p_micro', 'av_s_car', 'av_walk',\n",
-    "            'av_unknown'\n",
+    "            'has_drivers_license', 'is_student', 'is_paid', 'income_category', 'n_residence_members', \n",
+    "            'n_working_residents', 'n_residents_u18', 'n_residents_with_license', 'n_motor_vehicles', \n",
+    "            'has_medical_condition', 'ft_job', 'multiple_jobs', 'highest_education_bachelor_s_degree', \n",
+    "            'highest_education_graduate_degree_or_professional_degree', \n",
+    "            'highest_education_high_school_graduate_or_ged', \n",
+    "            'highest_education_less_than_a_high_school_graduate', \n",
+    "            'highest_education_some_college_or_associates_degree', 'primary_job_description_Other', \n",
+    "            'primary_job_description_Professional, Manegerial, or Technical', \n",
+    "            'primary_job_description_Sales or service', 'gender_man', \n",
+    "            'gender_non_binary_genderqueer_gender_non_confor', 'gender_woman', 'age_16___20_years_old', \n",
+    "            'age_21___25_years_old', 'age_26___30_years_old', 'age_31___35_years_old', \n",
+    "            'age_36___40_years_old', 'age_41___45_years_old', 'age_51___55_years_old', \n",
+    "            'age_56___60_years_old', 'age___65_years_old', 'av_p_micro', 'av_s_car', 'av_car', \n",
+    "            'av_ridehail', 'av_walk', 'av_transit', 'av_no_trip', 'av_s_micro', 'av_unknown'\n",
     "        ]\n",
     "    }\n",
     "    \n",
